--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "salomoni/authorized-attributes",
-    "description": "Dynamic Model attribute visibility for Laravel.",
+    "description": "Authorized Model Attributes for Laravel",
     "license": "MIT",
     "keywords": ["laravel", "attributes", "authorization", "hidden"],
     "authors": [
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=5.6.4",
         "illuminate/auth": "5.4.x|5.5.x",
         "illuminate/support": "5.4.x|5.5.x"
     },
