Update to support Laravel 7

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "illuminate/auth": "6.x",
-        "illuminate/support": "6.x"
+        "illuminate/auth": ">=6.0 <8.0",
+        "illuminate/support": ">=6.0 <8.0"
     },
     "require-dev": {
         "orchestra/testbench": "4.x"
